# Nova

./: CMakeLists.txt  NovaConfig.cmake.in  README.md  config.toml  install.ps1  install.sh  main.cpp  proto.nova  release.py  test.nova  version.txt
.github/workflows/: release.yml
include/Kalidous/: kalidous.h
include/Nova/: core.h  nova.h
include/Nova/interface/: CLI.h
include/Nova/parse/: ast.h  tokenizer.h  tokens.h  tokens_map.h
include/Nova/utils/: debug.h  helpers.h  list.h  slice.h  vector.h
internal/: core.h  file.h  helpers.h  parser.h  token.h  tokenizer.h  tokens.h  tokens_map.h
src/: main.cpp
